[package]
name = "ml-progress"
version = "0.1.0"
license = "MIT"
description = "Single line progress indicator for terminal/console."
repository = "https://github.com/malaire/ml-progress"
keywords = [ "cli", "console", "progress", "progressbar", "terminal" ]
categories = [ "command-line-interface" ]
edition = "2021"

include = [
    "/src",
    "LICENSE",
    "README.md",
    "build.rs",
]

[dependencies]
parking_lot = "0.12.0"
terminal_size = "0.1.17"

[build-dependencies]
readme-rustdocifier = "0.1.1"
